--- a/index.html
+++ b/index.html
@@ -13,17 +13,14 @@
 </head>
 
 <body>
-		<div class="jumbotron">
-			<h1 class="text-center">Number to Match: <span id="number-to-match"></span></h1>
-		</div>
+	<div id="header">
+		<h2>Collect: <span id="crystals-to-collect"></span> Crystals</h2>
+		<h3>You've collected: <span id="number-so-far"></span></h3>
+	</div>
 	
 
 	<div id="crystals">
 
-		<!-- <img class="crystal-images" src="assets/images/sapphire.png" alt="crystals">
-		<img class="crystal-images" src="assets/images/zircon.png" alt="crystals">
-		<img class="crystal-images" src="assets/images/emerald.png" alt="crystals">
-		<img class="crystal-images" src="assets/images/ruby.png" alt="crystals"> -->
 
 	</div>
 
@@ -31,13 +28,22 @@
 
 	<script type="text/javascript">
 
-	var targetNumber = 55;
+	var targetNumber = 56;
 
-	$("#number-to-match").text(targetNumber);
+	$("#crystals-to-collect").text(targetNumber);
+
+	// var images = $("<img>");
+	// images.addClass("crystalcss");
+
+	var images = ["trollhunters.png", "purplecave.png", "blueart.png", "greyblueart.png"];
 
 	var counter = 0;
+	var numCrystals = 4;
 
-	var numberOptions = [10, 5, 3, 7];
+	var numberOptions = [];
+	for (var i = 0; i < numCrystals; i++) {
+		numberOptions.push(Math.floor((Math.random() * 10) + 1));
+	}
 
 	for (var i = 0; i < numberOptions.length; i++) {
 
@@ -45,9 +51,8 @@
 
 		imageCrystal.addClass("crystal-images");
 
-		imageCrystal.attr("src", "assets/images/sapphire.png");
+		imageCrystal.attr("src", "assets/images/" + images[i]);
 
-		imageCrystal.attr("src", "assets/images/zircon.png");
 
 		imageCrystal.attr("data-crystalvalue", numberOptions[i]);
 
@@ -63,9 +68,10 @@
 
 		counter += crystalValue;
 
-		alert("New score: " + counter);
+		$("#number-so-far").text(counter + " crystals!");
 
 		if (counter === targetNumber) {
+
 			alert("You win!");
 		}
 
@@ -80,6 +86,6 @@
     
 
 
-	
+	</div>
 </body>
 </html>
