--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-<div id="container">
+<div id="container-fluid">
 
 	<div id="header1">
 		<h4><strong>Collect: <span id="crystals-to-collect"></span> Crystals</strong></h4>
